feat: adding edit profile fonctionnality
